# formula

./: .env  Cargo.toml
src/: app.rs  db.rs  error.rs  main.rs  surreal.rs
src/index/: mod.rs  templates.rs
src/index/routes/: get.rs
src/user/: dtos.rs  extract.rs  mod.rs  records.rs  service.rs  table.rs
src/user/routes/: post.rs
templates/: index.html
