[package]
name = "formula"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = "2.3.2"
tokio = { version = "1.45.0", features = ["full"] }
